Refactor model evaluation and results display in Jupyter notebook

--- a/odev2/evler.ipynb
+++ b/odev2/evler.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "#gerekli kütüphaneleri indiriyoruz\n",
     "%pip install pandas scikit-learn\n",
-    "%pip install matplotlib"
+    "%pip install matplotlib\n",
+    "%pip install numpy"
    ]
   },
   {
@@ -117,13 +118,19 @@
     "    medae = median_absolute_error(true_values, predictions)\n",
     "    return {\"MAE\": mae, \"MSE\": mse, \"R2\": r2, \"MedAE\": medae}\n",
     "lr_results = evaluate_model(test[\"fiyat\"], lr_predictions)\n",
-    "print(\"Linear Regression Results:\", lr_results)\n",
     "dt_results = evaluate_model(test[\"fiyat\"], dt_predictions)\n",
-    "print(\"Decision Tree Results:\", dt_results)\n",
     "rf_results = evaluate_model(test[\"fiyat\"], rf_predictions)\n",
-    "print(\"Random Forest Results:\", rf_results)\n",
     "svr_results = evaluate_model(test[\"fiyat\"], svr_predictions)\n",
-    "print(\"SVR Results:\", svr_results)"
+    "\n",
+    "#sonuçları tablo halinde gösteriyoruz\n",
+    "results_df = pd.DataFrame({\n",
+    "    \"Model\": [\"Linear Regression\", \"Decision Tree\", \"Random Forest\", \"SVR\"],\n",
+    "    \"MAE\": [lr_results[\"MAE\"], dt_results[\"MAE\"], rf_results[\"MAE\"], svr_results[\"MAE\"]],\n",
+    "    \"MSE\": [lr_results[\"MSE\"], dt_results[\"MSE\"], rf_results[\"MSE\"], svr_results[\"MSE\"]],\n",
+    "    \"R2\": [lr_results[\"R2\"], dt_results[\"R2\"], rf_results[\"R2\"], svr_results[\"R2\"]],\n",
+    "    \"MedAE\": [lr_results[\"MedAE\"], dt_results[\"MedAE\"], rf_results[\"MedAE\"], svr_results[\"MedAE\"]]\n",
+    "})\n",
+    "print(results_df)"
    ]
   },
   {
@@ -165,6 +172,38 @@
     "}\n",
     "best_model = min(results, key=lambda x: results[x][\"MAE\"])\n",
     "print(\"En İyi Model:\", best_model, \"with MAE:\", results[best_model][\"MAE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5db112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#en iyi modelin; model.intercept_,std_err ve model.coef_ değerlerini yazdırıyoruz\n",
+    "import numpy as np\n",
+    "\n",
+    "if best_model == \"Linear Regression\":\n",
+    "    print(\"En İyi Model: Linear Regression\")\n",
+    "    print(\"Intercept:\", lr_model.intercept_)\n",
+    "    print(\"Coefficients:\", lr_model.coef_)\n",
+    "    print(\"Standard Error:\", np.std(lr_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"])) - train[\"fiyat\"]))\n",
+    "elif best_model == \"Decision Tree\":\n",
+    "    print(\"En İyi Model: Decision Tree\")\n",
+    "    print(\"Intercept: N/A for Decision Tree\")\n",
+    "    print(\"Coefficients: N/A for Decision Tree\")\n",
+    "    print(\"Standard Error:\", np.std(dt_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"])) - train[\"fiyat\"]))\n",
+    "elif best_model == \"Random Forest\":\n",
+    "    print(\"En İyi Model: Random Forest\")\n",
+    "    print(\"Intercept: N/A for Random Forest\")\n",
+    "    print(\"Coefficients: N/A for Random Forest\")\n",
+    "    print(\"Standard Error:\", np.std(rf_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"])) - train[\"fiyat\"]))\n",
+    "elif best_model == \"SVR\":\n",
+    "    print(\"En İyi Model: SVR\")\n",
+    "    print(\"Intercept: N/A for SVR\")\n",
+    "    print(\"Coefficients: N/A for SVR\")\n",
+    "    print(\"Support Vectors:\", svr_model.support_vectors_)"
    ]
   }
  ],
