Enhance Jupyter notebook with improved model evaluation and visualization

--- a/odev2/evler.ipynb
+++ b/odev2/evler.ipynb
@@ -21,7 +21,9 @@
    "outputs": [],
    "source": [
     "#test ve train setlerimizi import ediyoruz\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "train = pd.read_csv(\"evler-train.csv\")\n",
@@ -130,7 +132,13 @@
     "    \"R2\": [lr_results[\"R2\"], dt_results[\"R2\"], rf_results[\"R2\"], svr_results[\"R2\"]],\n",
     "    \"MedAE\": [lr_results[\"MedAE\"], dt_results[\"MedAE\"], rf_results[\"MedAE\"], svr_results[\"MedAE\"]]\n",
     "})\n",
-    "print(results_df)"
+    "\n",
+    "# Daha okunabilir gösterim için sayısal sütunları biçimlendiriyoruz\n",
+    "display_df = results_df.copy()\n",
+    "num_cols = [\"MAE\", \"MSE\", \"R2\", \"MedAE\"]\n",
+    "display_df[num_cols] = display_df[num_cols].applymap(lambda x: f\"{x:,.2f}\")\n",
+    "\n",
+    "print(display_df)"
    ]
   },
   {
@@ -140,20 +148,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sonuçları görselleştiriyoruz\n",
-    "import matplotlib.pyplot as plt\n",
+    "# numpy'nin uzun çıktıları kesmemesi için\n",
+    "np.set_printoptions(threshold=1000)\n",
     "\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "plt.plot(test[\"fiyat\"].values, label=\"Gerçek Fiyatlar\", color=\"blue\")\n",
-    "plt.plot(lr_predictions, label=\"LR Tahminleri\", color=\"red\")\n",
-    "plt.plot(dt_predictions, label=\"DT Tahminleri\", color=\"green\")\n",
-    "plt.plot(rf_predictions, label=\"RF Tahminleri\", color=\"orange\")\n",
-    "plt.plot(svr_predictions, label=\"SVR Tahminleri\", color=\"purple\")\n",
-    "plt.title(\"Gerçek ve Tahmin Edilen Fiyatlar\")\n",
-    "plt.xlabel(\"Örnekler\")\n",
-    "plt.ylabel(\"Fiyat\")\n",
+    "# Her modelin tahminlerini gerçek değerlerle karşılaştıran grafik\n",
+    "plt.figure(figsize=(16, 8))\n",
+    "\n",
+    "# Gerçek değerler\n",
+    "actual = test[\"fiyat\"].values\n",
+    "x_pos = np.arange(len(actual))\n",
+    "\n",
+    "# Bar genişliği\n",
+    "bar_width = 0.15\n",
+    "\n",
+    "# Her model için tahminleri çiz\n",
+    "plt.bar(x_pos - 1.5*bar_width, actual, bar_width, label='Gerçek Değer', color='black', alpha=0.7)\n",
+    "plt.bar(x_pos - 0.5*bar_width, lr_predictions, bar_width, label='Linear Regression', color='blue', alpha=0.7)\n",
+    "plt.bar(x_pos + 0.5*bar_width, dt_predictions, bar_width, label='Decision Tree', color='green', alpha=0.7)\n",
+    "plt.bar(x_pos + 1.5*bar_width, rf_predictions, bar_width, label='Random Forest', color='orange', alpha=0.7)\n",
+    "plt.bar(x_pos + 2.5*bar_width, svr_predictions, bar_width, label='SVR', color='red', alpha=0.7)\n",
+    "\n",
+    "plt.xlabel('Test Örnekleri')\n",
+    "plt.ylabel('Fiyat')\n",
+    "plt.title('Model Tahminlerinin Gerçek Değerlerle Karşılaştırılması')\n",
+    "plt.xticks(x_pos, range(1, len(actual) + 1))\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -182,28 +203,87 @@
    "outputs": [],
    "source": [
     "#en iyi modelin; model.intercept_,std_err ve model.coef_ değerlerini yazdırıyoruz\n",
-    "import numpy as np\n",
+    "\n",
+    "# formatlama fonksiyonları\n",
+    "fmt_float = lambda x: f\"{x:,.2f}\"\n",
+    "fmt_coef = lambda x: f\"{x:,.4f}\"\n",
+    "fmt_array = lambda arr, fmt=fmt_coef: \", \".join(fmt(float(v)) for v in np.atleast_1d(arr))\n",
     "\n",
     "if best_model == \"Linear Regression\":\n",
     "    print(\"En İyi Model: Linear Regression\")\n",
-    "    print(\"Intercept:\", lr_model.intercept_)\n",
-    "    print(\"Coefficients:\", lr_model.coef_)\n",
-    "    print(\"Standard Error:\", np.std(lr_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"])) - train[\"fiyat\"]))\n",
+    "    intercept = float(lr_model.intercept_)\n",
+    "    coefs = lr_model.coef_\n",
+    "    # get feature names from training dataframe (preserve column order)\n",
+    "    feature_names = list(train.drop(columns=[\"fiyat\", \"evNo\"]).columns)\n",
+    "    residuals = lr_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"])) - train[\"fiyat\"]\n",
+    "    std_err = float(np.std(residuals))\n",
+    "    print(\"Intercept:\", fmt_float(intercept))\n",
+    "    print(\"Coefficients:\")\n",
+    "    # print coefficient with sequence number and feature name for clarity (1-based index)\n",
+    "    for idx, (name, c) in enumerate(zip(feature_names, coefs), start=1):\n",
+    "        print(f\"  {idx}. {name}: {fmt_coef(c)}\")\n",
+    "    print(\"Standard Error (train residuals):\", fmt_float(std_err))\n",
+    "\n",
     "elif best_model == \"Decision Tree\":\n",
     "    print(\"En İyi Model: Decision Tree\")\n",
+    "    residuals = dt_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"])) - train[\"fiyat\"]\n",
+    "    std_err = float(np.std(residuals))\n",
     "    print(\"Intercept: N/A for Decision Tree\")\n",
     "    print(\"Coefficients: N/A for Decision Tree\")\n",
-    "    print(\"Standard Error:\", np.std(dt_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"])) - train[\"fiyat\"]))\n",
+    "    print(\"Standard Error (train residuals):\", fmt_float(std_err))\n",
+    "\n",
     "elif best_model == \"Random Forest\":\n",
     "    print(\"En İyi Model: Random Forest\")\n",
+    "    residuals = rf_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"])) - train[\"fiyat\"]\n",
+    "    std_err = float(np.std(residuals))\n",
     "    print(\"Intercept: N/A for Random Forest\")\n",
     "    print(\"Coefficients: N/A for Random Forest\")\n",
-    "    print(\"Standard Error:\", np.std(rf_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"])) - train[\"fiyat\"]))\n",
+    "    print(\"Standard Error (train residuals):\", fmt_float(std_err))\n",
+    "\n",
     "elif best_model == \"SVR\":\n",
     "    print(\"En İyi Model: SVR\")\n",
-    "    print(\"Intercept: N/A for SVR\")\n",
-    "    print(\"Coefficients: N/A for SVR\")\n",
-    "    print(\"Support Vectors:\", svr_model.support_vectors_)"
+    "    # SVR intercept_ ve support_vectors_ olabilir\n",
+    "    if hasattr(svr_model, \"intercept_\"):\n",
+    "        intercepts = np.atleast_1d(svr_model.intercept_)\n",
+    "        print(\"Intercept(s):\", fmt_array(intercepts, fmt=fmt_float))\n",
+    "    else:\n",
+    "        print(\"Intercept: N/A for SVR\")\n",
+    "    if hasattr(svr_model, \"support_vectors_\"):\n",
+    "        sv = svr_model.support_vectors_\n",
+    "        print(\"Support vectors count:\", sv.shape[0])\n",
+    "        # İlk 5 support vector'u göster\n",
+    "        n_show = min(5, sv.shape[0])\n",
+    "        print(f\"First {n_show} support vectors:\")\n",
+    "        for i in range(n_show):\n",
+    "            print(\" \", fmt_array(sv[i], fmt=fmt_coef))\n",
+    "    else:\n",
+    "        print(\"Support Vectors: N/A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "806cd0b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model_intercept_, std_err ve model.coef_ değerlerini grafik olarak gösteriyoruz\n",
+    "if best_model == \"Linear Regression\":\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    coef_vals = lr_model.coef_\n",
+    "    feature_names = list(train.drop(columns=[\"fiyat\", \"evNo\"]).columns)\n",
+    "    # build numbered labels like '1. brutM2', '2. netM2', ... for the x-ticks\n",
+    "    numbered_labels = [f\"{i+1}. {n}\" for i, n in enumerate(feature_names)]\n",
+    "    plt.bar(range(len(coef_vals)), coef_vals)\n",
+    "    plt.title(\"Linear Regression Coefficients\")\n",
+    "    plt.xlabel(\"Feature\")\n",
+    "    plt.ylabel(\"Coefficient Value\")\n",
+    "    # label x-ticks with feature names and rotate for readability\n",
+    "    plt.xticks(range(len(feature_names)), numbered_labels, rotation=45, ha=\"right\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"Coefficient plot is only available for Linear Regression model.\")"
    ]
   }
  ],
