Add data preprocessing and model evaluation steps in Jupyter notebook

--- a/odev2/evler.ipynb
+++ b/odev2/evler.ipynb
@@ -41,6 +41,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0eeb81c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#veri ön işleme ile değeri -1 (yani boş) olan verileri, knn kullanarak dolduruyoruz\n",
+    "from sklearn.impute import KNNImputer\n",
+    "import numpy as np\n",
+    "\n",
+    "# Convert -1 to NaN so KNN Imputer can recognize them as missing values\n",
+    "train = train.replace(-1, np.nan)\n",
+    "test = test.replace(-1, np.nan)\n",
+    "\n",
+    "# Now apply KNN imputation\n",
+    "imputer = KNNImputer(n_neighbors=5)\n",
+    "train = pd.DataFrame(imputer.fit_transform(train), columns=train.columns)\n",
+    "test = pd.DataFrame(imputer.transform(test), columns=test.columns)\n",
+    "\n",
+    "print(\"Missing values after imputation:\")\n",
+    "print(f\"Train: {train.isna().sum().sum()}\")\n",
+    "print(f\"Test: {test.isna().sum().sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3cef395",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature scaling - critical for SVR and can improve other models\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Separate features and target\n",
+    "X_train = train.drop(columns=[\"fiyat\", \"evNo\"])\n",
+    "y_train = train[\"fiyat\"]\n",
+    "X_test = test.drop(columns=[\"fiyat\", \"evNo\"])\n",
+    "y_test = test[\"fiyat\"]\n",
+    "\n",
+    "# Scale features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = pd.DataFrame(scaler.fit_transform(X_train), columns=X_train.columns)\n",
+    "X_test_scaled = pd.DataFrame(scaler.transform(X_test), columns=X_test.columns)\n",
+    "\n",
+    "print(\"Feature scaling completed\")\n",
+    "print(f\"Train shape: {X_train_scaled.shape}\")\n",
+    "print(f\"Test shape: {X_test_scaled.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f9ed35a6",
    "metadata": {},
    "outputs": [],
@@ -73,7 +124,7 @@
    "outputs": [],
    "source": [
     "#DecisionTreeRegressor modeli\n",
-    "dt_model = DecisionTreeRegressor()\n",
+    "dt_model = DecisionTreeRegressor(random_state=42)\n",
     "dt_model.fit(train.drop(columns=[\"fiyat\", \"evNo\"]), train[\"fiyat\"])\n",
     "dt_predictions = dt_model.predict(test.drop(columns=[\"fiyat\", \"evNo\"]))"
    ]
@@ -86,7 +137,7 @@
    "outputs": [],
    "source": [
     "#RandomForestRegressor modeli\n",
-    "rf_model = RandomForestRegressor()\n",
+    "rf_model = RandomForestRegressor(random_state=42)\n",
     "rf_model.fit(train.drop(columns=[\"fiyat\", \"evNo\"]), train[\"fiyat\"])\n",
     "rf_predictions = rf_model.predict(test.drop(columns=[\"fiyat\", \"evNo\"]))"
    ]
@@ -101,7 +152,13 @@
     "#SVR modeli\n",
     "svr_model = SVR()\n",
     "svr_model.fit(train.drop(columns=[\"fiyat\", \"evNo\"]), train[\"fiyat\"])\n",
-    "svr_predictions = svr_model.predict(test.drop(columns=[\"fiyat\", \"evNo\"]))"
+    "svr_predictions = svr_model.predict(test.drop(columns=[\"fiyat\", \"evNo\"]))\n",
+    "\n",
+    "# Train seti tahminlerini alıyoruz\n",
+    "lr_train_predictions = lr_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"]))\n",
+    "dt_train_predictions = dt_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"]))\n",
+    "rf_train_predictions = rf_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"]))\n",
+    "svr_train_predictions = svr_model.predict(train.drop(columns=[\"fiyat\", \"evNo\"]))"
    ]
   },
   {
@@ -111,34 +168,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#4 farklı metrik ile modellerimizi değerlendiriyoruz\n",
+    "#4 farklı metrik ile modellerimizi değerlendiriyoruz (hem train hem test)\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score, median_absolute_error\n",
+    "\n",
     "def evaluate_model(true_values, predictions):\n",
     "    mae = mean_absolute_error(true_values, predictions)\n",
     "    mse = mean_squared_error(true_values, predictions)\n",
     "    r2 = r2_score(true_values, predictions)\n",
     "    medae = median_absolute_error(true_values, predictions)\n",
     "    return {\"MAE\": mae, \"MSE\": mse, \"R2\": r2, \"MedAE\": medae}\n",
-    "lr_results = evaluate_model(test[\"fiyat\"], lr_predictions)\n",
-    "dt_results = evaluate_model(test[\"fiyat\"], dt_predictions)\n",
-    "rf_results = evaluate_model(test[\"fiyat\"], rf_predictions)\n",
-    "svr_results = evaluate_model(test[\"fiyat\"], svr_predictions)\n",
     "\n",
-    "#sonuçları tablo halinde gösteriyoruz\n",
-    "results_df = pd.DataFrame({\n",
+    "# Test set evaluation\n",
+    "lr_test_results = evaluate_model(test[\"fiyat\"], lr_predictions)\n",
+    "dt_test_results = evaluate_model(test[\"fiyat\"], dt_predictions)\n",
+    "rf_test_results = evaluate_model(test[\"fiyat\"], rf_predictions)\n",
+    "svr_test_results = evaluate_model(test[\"fiyat\"], svr_predictions)\n",
+    "\n",
+    "# Train set evaluation\n",
+    "lr_train_results = evaluate_model(train[\"fiyat\"], lr_train_predictions)\n",
+    "dt_train_results = evaluate_model(train[\"fiyat\"], dt_train_predictions)\n",
+    "rf_train_results = evaluate_model(train[\"fiyat\"], rf_train_predictions)\n",
+    "svr_train_results = evaluate_model(train[\"fiyat\"], svr_train_predictions)\n",
+    "\n",
+    "# Test sonuçlarını tablo halinde gösteriyoruz\n",
+    "print(\"=\" * 60)\n",
+    "print(\"TEST SET RESULTS\")\n",
+    "print(\"=\" * 60)\n",
+    "test_results_df = pd.DataFrame({\n",
     "    \"Model\": [\"Linear Regression\", \"Decision Tree\", \"Random Forest\", \"SVR\"],\n",
-    "    \"MAE\": [lr_results[\"MAE\"], dt_results[\"MAE\"], rf_results[\"MAE\"], svr_results[\"MAE\"]],\n",
-    "    \"MSE\": [lr_results[\"MSE\"], dt_results[\"MSE\"], rf_results[\"MSE\"], svr_results[\"MSE\"]],\n",
-    "    \"R2\": [lr_results[\"R2\"], dt_results[\"R2\"], rf_results[\"R2\"], svr_results[\"R2\"]],\n",
-    "    \"MedAE\": [lr_results[\"MedAE\"], dt_results[\"MedAE\"], rf_results[\"MedAE\"], svr_results[\"MedAE\"]]\n",
+    "    \"MAE\": [lr_test_results[\"MAE\"], dt_test_results[\"MAE\"], rf_test_results[\"MAE\"], svr_test_results[\"MAE\"]],\n",
+    "    \"MSE\": [lr_test_results[\"MSE\"], dt_test_results[\"MSE\"], rf_test_results[\"MSE\"], svr_test_results[\"MSE\"]],\n",
+    "    \"R2\": [lr_test_results[\"R2\"], dt_test_results[\"R2\"], rf_test_results[\"R2\"], svr_test_results[\"R2\"]],\n",
+    "    \"MedAE\": [lr_test_results[\"MedAE\"], dt_test_results[\"MedAE\"], rf_test_results[\"MedAE\"], svr_test_results[\"MedAE\"]]\n",
     "})\n",
     "\n",
-    "# Daha okunabilir gösterim için sayısal sütunları biçimlendiriyoruz\n",
-    "display_df = results_df.copy()\n",
+    "display_test_df = test_results_df.copy()\n",
     "num_cols = [\"MAE\", \"MSE\", \"R2\", \"MedAE\"]\n",
-    "display_df[num_cols] = display_df[num_cols].applymap(lambda x: f\"{x:,.2f}\")\n",
+    "display_test_df[num_cols] = display_test_df[num_cols].map(lambda x: f\"{x:,.2f}\")\n",
+    "print(display_test_df)\n",
     "\n",
-    "print(display_df)"
+    "# Train sonuçlarını tablo halinde gösteriyoruz\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TRAIN SET RESULTS\")\n",
+    "print(\"=\" * 60)\n",
+    "train_results_df = pd.DataFrame({\n",
+    "    \"Model\": [\"Linear Regression\", \"Decision Tree\", \"Random Forest\", \"SVR\"],\n",
+    "    \"MAE\": [lr_train_results[\"MAE\"], dt_train_results[\"MAE\"], rf_train_results[\"MAE\"], svr_train_results[\"MAE\"]],\n",
+    "    \"MSE\": [lr_train_results[\"MSE\"], dt_train_results[\"MSE\"], rf_train_results[\"MSE\"], svr_train_results[\"MSE\"]],\n",
+    "    \"R2\": [lr_train_results[\"R2\"], dt_train_results[\"R2\"], rf_train_results[\"R2\"], svr_train_results[\"R2\"]],\n",
+    "    \"MedAE\": [lr_train_results[\"MedAE\"], dt_train_results[\"MedAE\"], rf_train_results[\"MedAE\"], svr_train_results[\"MedAE\"]]\n",
+    "})\n",
+    "\n",
+    "display_train_df = train_results_df.copy()\n",
+    "display_train_df[num_cols] = display_train_df[num_cols].map(lambda x: f\"{x:,.2f}\")\n",
+    "print(display_train_df)"
    ]
   },
   {
@@ -184,15 +267,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sonuçları karşılaştırarak en iyi modeli seçiyoruz\n",
+    "#sonuçları karşılaştırarak en iyi modeli seçiyoruz (test seti bazında)\n",
     "results = {\n",
-    "    \"Linear Regression\": lr_results,\n",
-    "    \"Decision Tree\": dt_results,\n",
-    "    \"Random Forest\": rf_results,\n",
-    "    \"SVR\": svr_results\n",
+    "    \"Linear Regression\": lr_test_results,\n",
+    "    \"Decision Tree\": dt_test_results,\n",
+    "    \"Random Forest\": rf_test_results,\n",
+    "    \"SVR\": svr_test_results\n",
     "}\n",
     "best_model = min(results, key=lambda x: results[x][\"MAE\"])\n",
-    "print(\"En İyi Model:\", best_model, \"with MAE:\", results[best_model][\"MAE\"])"
+    "print(\"En İyi Model:\", best_model, \"with Test MAE:\", results[best_model][\"MAE\"])"
    ]
   },
   {
@@ -283,7 +366,85 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "else:\n",
-    "    print(\"Coefficient plot is only available for Linear Regression model.\")"
+    "    print(\"Coefficient plot is only available for Linear Regression model.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c71125c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature importance grafikleri (tree-based modeller için)\n",
+    "feature_names = list(train.drop(columns=[\"fiyat\", \"evNo\"]).columns)\n",
+    "numbered_labels = [f\"{i+1}. {n}\" for i, n in enumerate(feature_names)]\n",
+    "\n",
+    "if best_model == \"Decision Tree\":\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    importances = dt_model.feature_importances_\n",
+    "    indices = np.argsort(importances)[::-1]\n",
+    "    \n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.bar(range(len(importances)), importances[indices])\n",
+    "    plt.title(\"Decision Tree - Feature Importance (Sorted)\")\n",
+    "    plt.xlabel(\"Feature\")\n",
+    "    plt.ylabel(\"Importance\")\n",
+    "    plt.xticks(range(len(feature_names)), [numbered_labels[i] for i in indices], rotation=45, ha=\"right\")\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.barh(range(len(importances)), importances[indices])\n",
+    "    plt.title(\"Decision Tree - Feature Importance (Horizontal)\")\n",
+    "    plt.xlabel(\"Importance\")\n",
+    "    plt.ylabel(\"Feature\")\n",
+    "    plt.yticks(range(len(feature_names)), [numbered_labels[i] for i in indices])\n",
+    "    plt.gca().invert_yaxis()\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    # Print top 5 features\n",
+    "    print(\"\\nTop 5 Most Important Features:\")\n",
+    "    for i in range(min(5, len(importances))):\n",
+    "        idx = indices[i]\n",
+    "        print(f\"{i+1}. {feature_names[idx]}: {importances[idx]:.4f}\")\n",
+    "\n",
+    "elif best_model == \"Random Forest\":\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    importances = rf_model.feature_importances_\n",
+    "    indices = np.argsort(importances)[::-1]\n",
+    "    \n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.bar(range(len(importances)), importances[indices])\n",
+    "    plt.title(\"Random Forest - Feature Importance (Sorted)\")\n",
+    "    plt.xlabel(\"Feature\")\n",
+    "    plt.ylabel(\"Importance\")\n",
+    "    plt.xticks(range(len(feature_names)), [numbered_labels[i] for i in indices], rotation=45, ha=\"right\")\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.barh(range(len(importances)), importances[indices])\n",
+    "    plt.title(\"Random Forest - Feature Importance (Horizontal)\")\n",
+    "    plt.xlabel(\"Importance\")\n",
+    "    plt.ylabel(\"Feature\")\n",
+    "    plt.yticks(range(len(feature_names)), [numbered_labels[i] for i in indices])\n",
+    "    plt.gca().invert_yaxis()\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    # Print top 5 features\n",
+    "    print(\"\\nTop 5 Most Important Features:\")\n",
+    "    for i in range(min(5, len(importances))):\n",
+    "        idx = indices[i]\n",
+    "        print(f\"{i+1}. {feature_names[idx]}: {importances[idx]:.4f}\")\n",
+    "\n",
+    "elif best_model == \"Linear Regression\":\n",
+    "    # Coefficient visualization already handled in previous cell\n",
+    "    print(\"\\nFeature coefficients already displayed in the previous cell.\")\n",
+    "    \n",
+    "elif best_model == \"SVR\":\n",
+    "    print(\"\\nSVR does not provide direct feature importance.\")\n",
+    "    print(\"Consider using permutation importance or SHAP values for interpretation.\")"
    ]
   }
  ],
@@ -303,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
